--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<head>
+    <title>My Website</title>
+</head>
+<body>
+    <h1>Welcome to My Website</h1>
+    <button onclick="window.location.href = 'page1.html';">Go to Page 1</button>
+    <button onclick="window.location.href = 'page2.html';">Go to Page 2</button>
+</body>
